--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,25 +12,31 @@ h1{
 }
 
 .portrait{
-    height: 200px;
-    width: 200px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
+.portrait p{
+    font-size: 20px;
+    text-align: center;
+}
+
 .recipe-image{
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 150px;
+    max-width: 150px;
+    margin-left: 50px;
 }
 
 .content{
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
 
-.recipe-image-eggs{
-    height: 200px;
-    width: 200px;
-}
+
 
 .image-recipe{
     margin-left: 50px;
